25 Auguts 2004 Monique Teillaud
- new pdf figures, fixing the bounding boxes

19 August 2004 Monique Teillaud
- fixes in the bibliography
- pdf conversion of figures added

13 August 2004 Sylvain Pion
- T_hierarchy_vertex_base : remove useless and dubious "if (this)".

9 August 2004 Mariette Yvinec
- added Weighted_tag in   in  Delaunay_triangulation_3 
  and Regular_triangulation_3
- remove trivial function is_Gabriel(Vertex_handle v) from
   Delaunay_triangulation_3

5 August 2004 Mariette Yvinec
- added member function : bool is_Gabriel(Vertex_handle v)
 in  Delaunay_triangulation_3 and Regular_triangulation_3

29 July 2004 Sylvain Pion
- locate() cannot return CELL in 2D, so no need to test for it in insert.

28 July 2004 Sylvain Pion
- Fix test-suite for IA64.

24 June 2004 Sylvain Pion
- Fix demo/makefile for IRIX's make.
- Use CGAL_CFG_USING_BASE_MEMBER_BUG_3 for MipsPRO.

20 June 2004 Sylvain Pion
- Regular traits : unqualify some calls to e.g. power_test() to please
  g++ 3.4.

3 June 2004 Sylvain Pion
- Test-suite fixes for Darwin, which does not work fine on files open
  both read and write at the same time through 2 streams.

23 May 2004 Sylvain Pion
- Fix move_point() for degenerate dimensions.

22 May 2004 Sylvain Pion
- Make TDS::incident_cells(Vertex, OutputIterator) useful in dimension 2.
  operator==() of Triangulation_3 was relying on it.

22 May 2004 Sylvain Pion
- Use CGAL_CFG_USING_BASE_MEMBER_BUG_2 workaround for SunPRO.

20 May 2004 Sylvain Pion
- Perturbed predicate : minor changes.

18 May 2004 Sylvain Pion
- SunPRO workaround.

8 May 2004 Sylvain Pion
- test_regular_3.C : remove warning.

4 May 2004 Mariette Yvinec
- reset previous order in tab_vertex_triple_index[4][3].
  The change made test_delaunay_3 and test_delaunay_hierarchy_3.
  I will have to investifate more carefully about that later.

27 April 2004 Mariette Yvinec
- add test suite for  Regular_triangulation_euclidean_traits_3

27 April 2004 Mariette Yvinec